# golfbot

./: .env.example  .gitignore  CLAUDE.md  README.md  SPEC.md  config.yaml  pyproject.toml
golfbot/: __main__.py  actions.py  availability.py  bookings.py  bot.py  config.py  grading.py  horizon.py  mock_source.py  models.py  notifier.py  pipeline.py  scanner.py  store.py  weather.py
golfbot/providers/: base.py  golfatx.py  golfnow.py
tests/: test_actions.py  test_availability.py  test_bookings.py  test_config.py  test_grading.py  test_horizon.py  test_mock_source.py  test_models.py  test_notifier.py  test_pipeline.py  test_providers_golfatx.py  test_providers_golfnow.py  test_scanner.py  test_store.py  test_weather.py
tests/fixtures/: golfatx_roy_kizer_2026-05-19.html  golfnow_riverside_2026-05-21.json
