[project]
name = "golfbot"
version = "0.1.0"
description = "Austin municipal golf tee time watcher with Telegram notifications"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot>=21.0",
    "httpx>=0.27",
    "curl_cffi>=0.7",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pydantic>=2.6",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
    "APScheduler>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
golfbot = "golfbot.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["golfbot"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
